<resources>
    <string name="app_name">Quiz Taker</string>
    <string name="food">Food</string>
    <string name="places">Places</string>
    <string name="gk">General Information</string>
    <string name="logout">Logout</string>
    <string name="quizes">Quizes</string>
    <string name="login">Login</string>
    <string name="loginAccount">Login to your account</string>
    <string name="email">email</string>
    <string name="pass">Password</string>
    <string name="signup">Sign up</string>
    <string name="result">Result</string>
    <string name="name">Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="haveAcc">Already have an account?</string>
    <string name="notHaveAcc">Do not have an account?</string>
    <string name="testKnowledge">Test your knowledge</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="question">Emiratis eat this plate on breakfast, the plate\'s name is:</string>
</resources>