<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity"
    android:background="@color/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/quizes"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_24sdp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintVertical_bias="0.05"/>

    <Button
        android:id="@+id/foodButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintVertical_bias="0.4"
        android:text="@string/food"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins_regular"/>

    <Button
        android:id="@+id/placesButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintVertical_bias="0.5"
        android:text="@string/places"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins_regular"/>
    <Button
        android:id="@+id/gInfoButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintVertical_bias="0.6"
        android:text="@string/gk"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/poppins_regular"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintVertical_bias="0.7"
        android:text="@string/logout"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins_regular"/>
</androidx.constraintlayout.widget.ConstraintLayout>