<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        android:textColor="@color/colorPrimary"
        android:text="@string/login"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginToYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.1"
        android:textColor="@color/colorPrimary"
        android:text="@string/loginAccount"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToYourAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/EditTextTheme"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/lineGrayColor"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:paddingBottom="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lineGrayColor"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/EditTextTheme" />

                <ImageView
                    android:id="@+id/passwordShowHideImageView"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignBottom="@id/passwordEditText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/show"
                    app:tint="@color/colorPrimary" />
            </RelativeLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_16sdp"/>


            <LinearLayout
                android:id="@+id/doNotHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notHaveAcc"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>