<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Views.SignupActivity">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/signUpToCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Sign up to create your account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        app:layout_constraintVertical_bias="0.01" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpToCreateAccount"
        app:layout_constraintWidth_percent="0.85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingBottom="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/lineGrayColor"
                android:textSize="@dimen/_12sdp"
                android:theme="@style/EditTextTheme" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/lineGrayColor"
                android:textSize="@dimen/_12sdp"
                android:theme="@style/EditTextTheme" />

            <!--            <EditText-->
            <!--                android:id="@+id/contactNumberEditText"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="Contact Number"-->
            <!--                android:inputType="number"-->
            <!--                android:theme="@style/EditTextTheme"-->
            <!--                android:textSize="@dimen/_14sdp"-->
            <!--                android:textColorHint="@color/lineGrayColor"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:fontFamily="@font/poppins_regular"-->
            <!--                android:paddingBottom="@dimen/_16sdp"-->
            <!--                android:layout_marginTop="@dimen/_16sdp"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lineGrayColor"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/EditTextTheme" />

                <ImageView
                    android:id="@+id/passwordShowHideImageView"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignBottom="@id/passwordEditText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/show"
                    app:tint="@color/colorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/confirmPass"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lineGrayColor"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/EditTextTheme" />

                <ImageView
                    android:id="@+id/confirmPasswordShowHideImageView"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignBottom="@id/confirmPasswordEditText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/show"
                    app:tint="@color/colorPrimary" />
            </RelativeLayout>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:id="@+id/alreagyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/haveAcc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>